--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,45 +1,48 @@
 <tbody>
 
-    <div class="jumbotron jumbotron-fluid bg-warning">
-        <div class="container">
-            <h1 class="display-4 text-bold">ROUND TABLE</h1>
-            <p class="lead">WELCOME TO ROUND TABLE TO SEARCH BOOK'S COMMENTS</p>
+    <div class='jumbotron jumbotron-fluid bg-warning'>
+        <div class='container'>
+            <h1 class='display-4 text-bold'>ROUND TABLE</h1>
+            <p class='lead'>WELCOME TO ROUND TABLE TO SEARCH BOOK'S COMMENTS</p>
         </div>
     </div>
 
 
 
-    <div class="container">
-        <div class="input-group mb-3" style=" margin-bottom: 20px;">
-            <input type="text" class="form-control" placeholder="Type Book Title" aria-label="Recipient's username"
-                aria-describedby="button-addon2">
-            <div class="input-group-append">
-                <button class="btn btn-outline-secondary bg-primary text-white" type="button"
-                    id="button-addon2">Search</button>
+    <div class='container'>
+        <div class='input-group mb-3' style=' margin-bottom: 20px;'>
+            <input type='text' class='form-control' placeholder='Type Book Title' aria-label='Recipient' s username'
+                aria-describedby='button-addon2' id='searchText'>
+            <div class='input-group-append'>
+                <button class='btn btn-outline-secondary bg-primary text-white' type='button'
+                    id='searchBtn'>Search</button>
             </div>
         </div>
 
 
-        {{#each book}}
+
         <ul>
-            <li>
-                <div class="row mb-4">
-                <div class="card col-sm-3" style=" height: 500px;">
-                <img src="{{imagelink}}" class="card-img-top" height="300px" alt="bookimage">
-                    <div class="card-body">
-                        <h5 class="card-title">{{title}}</h5>
-                        <p class="card-text">{{subtitle}}</p>
-                        <button class="mybutton" DATA-ID={{addsql}}>ADD</button>
-                        <button class="mybutton" DATA-ID={{openDetailPage}}>OPEN</button>
+
+            <div class='row mb-4'>
+                {{#each book}}
+                    <div class='card' style=' height: 500px;'>
+                        <img src='{{volumeInfo.imageLinks.thumbnail}}' class='card-img-top' height='300px'
+                            alt='bookimage'>
+                        <div class='card-body'>
+                            <h5 class='card-title'>{{volumeInfo.title}}</h5>
+                            <p class='card-text'>{{volumeInfo.subtitle}}</p>
+                            <button class='mybutton' DATA-ID={{addsql}}>ADD</button>
+                            <button class='mybutton' DATA-ID={{openDetailPage}}>OPEN</button>
+                        </div>
                     </div>
-                </div>
-            </li>
+                {{/each}}
+
         </ul>
-        {{/each}}
 
 
 
-        </div>
+
+    </div>
 
     </div>
 
