--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,16 +25,17 @@
 
             <div class='row mb-4'>
                 {{#each book}}
-                    <div class='card' style=' height: 500px;'>
-                        <img src='{{volumeInfo.imageLinks.thumbnail}}' class='card-img-top' height='300px'
-                            alt='bookimage'>
-                        <div class='card-body'>
-                            <h5 class='card-title'>{{volumeInfo.title}}</h5>
-                            <p class='card-text'>{{volumeInfo.subtitle}}</p>
-                            <button class='mybutton' DATA-ID={{addsql}}>ADD</button>
-                            <button class='mybutton' DATA-ID={{openDetailPage}}>OPEN</button>
-                        </div>
+                <div class='card' style=' height: 500px;'>
+                    <img src='{{volumeInfo.imageLinks.thumbnail}}' class='card-img-top' height='300px' alt='bookimage'>
+                    <div class='card-body'>
+                        <h5 class='card-title'>{{volumeInfo.title}}</h5>
+                        <p class='card-text'>{{volumeInfo.subtitle}}</p>
+                        <button class='btn btn-primary mybutton add-button' DATA-id={{id}}
+                            DATA-title="{{volumeInfo.title}}" DATA-author="{{volumeInfo.authors.[0]}}"
+                            DATA-isbn="{{volumeInfo.industryIdentifiers.[0].identifier}}">ADD</button>
+                        <button class='btn btn-primary mybutton open-button' DATA-id={{id}}>OPEN</button>
                     </div>
+                </div>
                 {{/each}}
 
         </ul>
